# ecs153-sq-hw0

./: README.md  generate_submission.sh
.devcontainer/: devcontainer.json
input/: 0.txt  1.txt  2.txt
src/: CMakeLists.txt  main.c
src/include/: basic.h  calculator.h  fun.h  scientific.h  unary.h
src/lib/: basic.c  calculator.c  fun.c  scientific.c  unary.c
src/tests/: AutograderTests.cpp
